--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -52,8 +52,8 @@
             android:textColor="#6A2C70"
             android:textSize="20sp"/>
 
-
-            <LinearLayout
+        <!-- Fields for School -->
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -335,6 +335,7 @@
 
             </LinearLayout>
 
+        <!-- DTR -->
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
